kubernetes/apps/default/influx/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: default
spec:
  ports:
    - port: 8086
      name: http
  clusterIP: None
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: influxdb
  namespace: default
  labels:
    kubernetes.io/service-name: influxdb
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8086
endpoints:
  - addresses:
      - 192.168.1.165
