kubernetes/apps/default/influx/influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/service-upstream: "false"
spec:
  ingressClassName: internal
  rules:
    - host: &host influx.internal.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  name: http
  tls:
    - secretName: influxdb-tls
      hosts:
        - *host
